<resources>
    <string name="app_name" translatable="false">GroApp</string>
    <!--Add Business Page-->
    <string name="addBusiness">Add Your Business</string>
    <string name="businessName">Business Name</string>
    <string name="businessNameEx">Hakuna Plants Nursery</string>
    <string name="businessOwner">Business Owner</string>
    <string name="businessOwnerEx" translatable="false">Sanji Samson</string>
    <string name="businessLocation">Location</string>
    <string name="businessLocationEx" translatable="false">Pittugala, Malabe</string>
    <string name="businessContactNo">Contact Number</string>
    <string name="businessContactNoEx" translatable="false">071 234 5678</string>
    <string name="businessEmail">Email</string>
    <string name="businessEmailEx" translatable="false">hakuna@hotmail.com</string>
    <string name="businessDescription">Description</string>
    <string name="businessDescriptionEx">Add your Business Description Here</string>
    <string name="businessProducts">Products</string>
    <string name="businessProduct1">Fertiliser - Organic</string>
    <string name="businessProduct2">Fertiliser - Artificial</string>
    <string name="addProductsBtn">Add Products</string>


    <!--Home-->
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <string name="market">Market</string>
    <string name="leaderboard">Gardens</string>
    <string name="account">Account</string>
    <string name="avrgSessionText">Average Session</string>
    <string name="avrgSessionEx">2h 34m /day</string>
    <string name="goalText">Session Goal</string>
    <string name="goalEx">3h /day</string>
    <string name="nearbyGardens">Nearby Gardens</string>
    <string name="gardenName">Pittugala Community Garden</string>
    <string name="gardenLocation">Pittugala, Malabe</string>

    <string name="pickUpsOwner">Peter Parker</string>
    <string name="pickUpsAddress">Malabe Road, Kaduwela</string>
    <string name="pickUpsContact">0763322132</string>


    <!---Browse Category-->
    <string name="browseCategory">Browse Category</string>
    <string name="searchCategory">Fruits, vegetables, etc</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="indoorPlants">Indoor Plants</string>
    <string name="medicinalLeafs">Herbs</string>
    <string name="succulents">Succulents</string>
    <string name="shadePlants">Shade Plants</string>
    <string name="cacti">Cacti</string>
    <string name="fruitTrees">Fruit Trees</string>
    <string name="plants">Plants</string>
    <string name="fruits_description">fruits description</string>

    <!--Item Names-->
    <string name="guava">Guava</string>

    <!--Item Prices-->
    <string name="guavePrice">LKR: 100.00</string>

    <!--Item Add to Cart Values-->
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="delete">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="initialValue">1</string>
    <string name="addToCart">Add 1 to Cart * LKR: 100.00</string>
    <string name="hintSpecial">Add a note (extra packaging, no bag, etc.)</string>
    <string name="orderSuccessHeading">Order placed successfully!</string>
    <string name="orderSuccessContent">You will be notified pick up details once the owner approved the order…</string>
    <string name="orderSuccessGoBack">Explore More</string>

    <!--Browse Items-->
    <string name="results">3 results</string>
    <string name="itemsCount">44 Results</string>
    <string name="ratings">4.5 Ratings</string>

    <!--Garden Items/Orders/Pick Ups-->
    <string name="chooseCategory">Choose Category</string>
    <string name="items">Items</string>
    <string name="completed">Completed</string>
    <string name="pickup">Pick Ups</string>
    <string name="pending">Pending</string>
    <string name="item1Name">Potato</string>
    <string name="item1Price">90</string>
    <string-array name="itemUnit">
        <item>Select</item>
        <item>grams(g)</item>
        <item>kilogram(kg)</item>
    </string-array>
    <string-array name="categories">
        <item>Select</item>
    </string-array>
    <string name="item1BestBefore">26/03/2023</string>
    <string name="item1Description">Grown with organic fertilisers</string>
    <string name="item1OrderQnty">10 kgs</string>
    <string name="item1Qnty">12</string>
    <string name="item1Unit">grams(g)</string>
    <string name="item1TotalPrice">900 LKR</string>
    <string name="item1OrderedOn">17/03/2023</string>
    <string name="item1OrderConfirmed">17/03/2023</string>
    <string name="item1OrderPickedUp">18/03/2023</string>

    <string name="OrderedOn">Order Placed On</string>
    <string name="OrderConfirmed">Order Confirmed On</string>
    <string name="rderPickedUp">Order Picked Up On</string>
    <string name="orderQnty">Order Quantity</string>

    <string name="item2Name">Tomato</string>
    <string name="item2Price">120 LKR/kg</string>
    <string name="item2BestBefore">3/03/2023</string>
    <string name="item2Description">Grown with organic fertilisers</string>
    <string name="item2OrderQnty">8 kgs</string>
    <string name="item2TotalPrice">960 LKR</string>

    <string name="approveBtn">Confirm</string>
    <string name="rejectBtn">Reject</string>
    <string name="editBtn">Edit</string>
    <string name="deleteBtn">Delete</string>
    <string name="addItem">New Item</string>
    <string name="completeOrder">Completed</string>
    <string name="PutBackStocl">Put Back</string>

    <!--Add Item-->
    <string name="itemName">Item Name</string>
    <string name="category">Category</string>
    <string name="photo">Image</string>
    <string name="unit">Unit</string>
    <string name="unitPrice">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="bestBefore">Best Before</string>
    <string name="description">Description</string>

    <string name="addtoTheStock">Add item to the Stock</string>
    <string name="deleteItem">Delete</string>
    <string name="updateItem">Update</string>
    <string name="uploadMedia">Add Image</string>
    <string name="editMedia">Edit Image</string>

    <!--Completed Orders-->
    <string name="rateBtn">Rate</string>
    <string name="rateItem">Rate Order</string>
    <string name="rated">Rated</string>
    <string name="orders">Orders</string>


    <!-- Notifications -->
    <string name="notification">Notifications</string>
    <string name="markAllAsRead">Mark All As Read</string>

    <!--Login-->
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="emailEx">example@gmail.com</string>
    <string name="password">password</string>
    <string name="passwordEx">12345678</string>
    <string name="createAccount">Don\'t have an account? Sign up</string>
    <string name="forgotPassword">Forgot Passsword?</string>


    <!--Sign Up-->
    <string name="signUp">Sign up</string>
    <string name="loginAccount">Already have an account? Log in</string>
    <string name="Name">Name</string>
    <string name="NameEx">Peter Parker</string>
    <string name="confirmPassword">Re-Type Password</string>

    <!--My Account -->
    <string name="myAccount">My Account</string>
    <string name="myGardens">My Gardens</string>
    <string name="editProfile">Edit Profile</string>
    <string name="myOrders">My Orders</string>
    <string name="myProfilee">My Profile</string>

    <!--    Garden String Values-->

    <!--Add Community Garden-->
    <string name="addGarden">Add a Garden</string>
    <string name="gardenname">Garden name</string>
    <string name="gardenNameEx">Chandler\'s garden</string>
    <string name="cgAddress">Address</string>
    <string name="cgAddressEx">Negombo Road, kalugamuwa</string>
    <string name="cgArea">Area(acre)</string>
    <string name="cgAreaEx">2</string>
    <string name="cgLocationLink">Add Location Link</string>
    <string name="cgLocationLinkEx">Location</string>
    <string name="cgPhoneNumber">Phone Number</string>
    <string name="cgPhoneNumberEx">0765288617</string>
    <string name="cgDescription">Description</string>
    <string name="cgDescriptionEx">Add a description here..</string>
    <string name="cgbtnAdd">Submit</string>
    <string name="cgbtnCancel">Cancel</string>

    <!--Update Community Garden-->
    <string name="updateGarden">Update Garden Details</string>
    <string name="cgUpdatebtn">Update</string>
    <string name="cgResetbtn">Reset</string>

    <!--A Community Garden-->
    <string name="sharebtn">Share</string>
    <string name="volunteerbtn">Volunteer</string>
    <string name="Locationlink">Location Link</string>
    <string name="DescriptionEx">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in sem diam. Suspendisse sit amet elit lectus. In et cursus mi, vel sollicitudin dui. Vestibulum pulvinar molestie vestibulum. Donec sit amet cursus elit. Sed et sagittis augue, sed ornare nisl. Nunc risus metus, dapibus ut fringilla vel, varius sit amet nisi.</string>

    <!--community garden List-->
    <string name="cgListSearch">Search</string>
    <string name="cgListArea">1.4 acre</string>

    <!--    Analytics-->
    <string name="aTitle">Analytics</string>
    <string name="aNoOfGardens">Total No of Gardens</string>
    <string name="aNoOfVolunteers">Total No of Volunteers</string>
    <string name="channel_name">GroApp</string>
    <string name="channel_description">For The Future</string>

<!--    Volunteer -->
    <string-array name="my_spinner_items">
        <item>Pending</item>
        <item>Approved</item>
        <item>Confirmed</item>
    </string-array>
</resources>


