<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Garden.AddGardenActivity">


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/addYourBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addGarden"
        android:textColor="@color/darkGreen"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/BusinessNamelinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addYourBusiness">

        <EditText
            android:id="@+id/gardenName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:text="@string/gardenNameEx"
            android:textColor="@color/darkGreen"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/businessNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborder"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:text="@string/gardenName"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addYourBusiness" />

    <LinearLayout
        android:id="@+id/businessOwnerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BusinessNamelinearLayout">

        <EditText
            android:id="@+id/gardenAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/cgAddressEx" />
    </LinearLayout>

    <TextView
        android:id="@+id/businessOwnerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborder"
        android:paddingLeft="4dp"
        android:paddingTop="-4dp"
        android:paddingRight="4dp"
        android:text="@string/cgAddress"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BusinessNamelinearLayout" />

    <LinearLayout
        android:id="@+id/businessLocationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessOwnerLinearLayout">

        <EditText
            android:id="@+id/gardenArea"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/cgAreaEx"
            android:textColor="@color/darkGreen" />
    </LinearLayout>

    <TextView
        android:id="@+id/businessLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborder"
        android:paddingLeft="4dp"
        android:paddingTop="-4dp"
        android:paddingRight="4dp"
        android:text="@string/cgArea"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessOwnerLinearLayout" />


    <LinearLayout
        android:id="@+id/ContactNolinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessLocationLinearLayout">

        <EditText
            android:id="@+id/gardenLocation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="link"
            android:textColor="@color/darkGreen" />
    </LinearLayout>

    <TextView
        android:id="@+id/contactNoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborder"
        android:paddingLeft="4dp"
        android:paddingTop="-4dp"
        android:paddingRight="4dp"
        android:text="@string/cgLocationLink"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessLocationLinearLayout" />


    <LinearLayout
        android:id="@+id/emailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContactNolinearLayout">

        <EditText
            android:id="@+id/gardenPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/cgPhoneNumberEx"
            android:textColor="@color/darkGreen" />
    </LinearLayout>

    <TextView
        android:id="@+id/businessEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborder"
        android:paddingLeft="4dp"
        android:paddingTop="-4dp"
        android:paddingRight="4dp"
        android:text="@string/cgPhoneNumber"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContactNolinearLayout" />


    <LinearLayout
        android:id="@+id/DescriptionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLinearLayout">

        <EditText
            android:id="@+id/gardenDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/cgDescriptionEx"
            android:textColor="@color/darkGreen" />
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborder"
        android:paddingLeft="4dp"
        android:paddingTop="-4dp"
        android:paddingRight="4dp"
        android:text="@string/cgDescription"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLinearLayout" />

    <LinearLayout
        android:id="@+id/addProductsBtnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionLinearLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/addProductsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/cgbtnCancel">

        </Button>

        <Button
            android:id="@+id/gardenSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/cgbtnAdd">

        </Button>

    </LinearLayout>
    <!--bottom nav Bar-->
    <LinearLayout
        android:id="@+id/BottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/fourdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/home_icon" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_shopping_cart_24" />

            <TextView
                android:id="@+id/marketText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/leaderboard_icon" />

            <TextView
                android:id="@+id/leaderboardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/account_icon" />

            <TextView
                android:id="@+id/accountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:textSize="12sp" />
        </LinearLayout>

         
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>