<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tvCatImage"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/buttonborder"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/fruits"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="210dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tvCatDescription"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/fruits_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvBestBefore"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/item1BestBefore"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!--Edit Delete Btns-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fourdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fourdp"
                    android:layout_weight="1"
                    android:background="@drawable/aprove_button"
                    android:text="@string/editBtn"
                    android:textAllCaps="false"
                    android:textColor="@color/backgroundWhite"
                    app:backgroundTint="@color/approveGreen" />

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fourdp"
                    android:layout_weight="1"
                    android:background="@drawable/red_button"
                    android:text="@string/deleteBtn"
                    android:textAllCaps="false"
                    android:textColor="@color/backgroundWhite"
                    app:backgroundTint="@color/rejectRed" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
