<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/darkGreen"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:id="@+id/BusinessNamelinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/darkGreen"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/gLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gardenNameEx"
            android:textColor="@color/white"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/gLArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cgListArea"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textSize="20dp">

            <TextView
                android:id="@+id/gLAddress"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/cgAddressEx"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_navigate_next" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>